--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,9 @@
         <label for="title"> TITLE:</label>
         <input type="text" id="title" name="title"/><br>
 
-        <label for="comment"> NEWS TEXT:</label>
+        <label for="news_text"> NEWS TEXT:</label>
         <P>Enter Text Here</P>
-        <textarea id="comment" name="comment"></textarea><br>
+        <textarea id="news_text" name="news_text"></textarea><br>
 
         <input type="submit" class="btn-info" value="predict">
 
